--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -3,17 +3,17 @@
 <section>
     <div class="col">
         <%for(const article of articles){%>
-            <div class="container-lg">
-                <div class="card mx-auto mb-3" style="width: 18rem;">
-                  
-                    
-                      <h5 class="card-title"><%=article.name%> </h5>
-                      <p class="card-text"><%=article.desc%> </p>
-        
-                      <a href="/articles/<%=article._id%>" class="btn btn-primary btn-sm">Show</a>
-                    
-                  </div>
-            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-title"><%=article.name%> </h5>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Content</h5>
+                  <p class="card-text"><%=article.desc%> </p>
+                  <a href="/articles/<%=article._id%>" class="btn btn-primary btn-sm">Show</a>
+                </div>
+              </div>
         <%}%>
     </div>
 </section>
+
