--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -1,5 +1,6 @@
 <% layout('layout/boilerplate') -%>
 <h1>Articles </h1>
+
 <section>
     <div class="col">
         <%for(const article of articles){%>
@@ -17,3 +18,9 @@
     </div>
 </section>
 
+
+<section>
+    <div>
+        <a href="/articles/new" class="btn btn-primary btn-sm"><button type="button" class="btn btn-primary btn-lg">Add New Article</button></a>
+    </div>
+</section>
